- new method SCIPhashmapExists()
- method SCIPhashmapRemove() can now also be called, if the element does not exist in the map
- new method SCIPvarIsTransformedOrigvar()
- new method SCIPvarIsDeleted()
- new callback parameter "validnode" for the CONFLICTEXEC method of conflict handlers, which should be passed to
  SCIPaddConsNode()

plugins:

parameters:
- replaced parameter presolving/restartbdchgs with parameters presolving/maxrestarts and presolving/restartfac
- new parameter conflict/maxclauses
- new parameter conflict/allowlocal
- new parameter branching/fullstrong/reevalage

features:
- reactivated multiaggregation in cons_linear.c on binary variables again (possible due to bug fix below)
- introduced subversion string
- adding variable bounds automatically adds the corresponding implication
- conflict clauses are now collected in a conflict store, redundant clauses are eliminated, and only the best
  "conflict/maxclauses" clauses are added permanently to the problem; the remaining clauses are only added
  temporarily, if they can be used for repropagation
- improved debugging for infeasible cuts and propagations, given a primal feasible solution

fixed bugs:
- LP primal feasibility for bounds is now defined as absolute measure (was relative to the bound before);
  this fixes a bug (see alu8_9.mps), that an LP with an integral variable fixed to a large value yields an
  accepted solution with that variable slightly different than the fixed value; the integrality feasibility
  condition is measured with absolute differences, which leads to the fixed integer variable being fractional;
  this leads to an error if branching is performed on this variable
- locally fixed variables are no longer used as branching candidates even if their LP solution value is
  fractional (due to numerical reasons, see above)
- fixed minor bugs in debug code of primal.c and sol.c